<resources>
    <string name="app_name">草原生态数据</string>
    <string name="system_name">蒙草</string>

    <string name="home">首页</string>
    <string name="data_collection">数据采集</string>
    <string name="plant_recognition">植图识别</string>
    <string name="ecological_navigation">生态导航</string>
    <string name="personal_center">个人中心</string>

    <!--权限判断-->
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。请点击"设置"-"权限"-打开所需权限。最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>

    <!--云服务-->
    <string name="serverhost">http://101.201.54.143:5830/</string>
</resources>
