<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgWhite"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.otitan.grasslandecology.view.NoScrollViewPager
            android:id="@+id/vp_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rg_main"/>

        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <RadioButton
                android:id="@+id/rb_home"
                style="@style/style_RadioButton"
                android:checked="true"
                android:text="@string/home"/>

            <RadioButton
                android:id="@+id/rb_dc"
                style="@style/style_RadioButton"
                android:text="@string/data_collection"/>

            <RadioButton
                android:id="@+id/rb_pr"
                style="@style/style_RadioButton"
                android:text="@string/plant_recognition"/>

            <RadioButton
                android:id="@+id/rb_en"
                style="@style/style_RadioButton"
                android:text="@string/ecological_navigation"/>

            <RadioButton
                android:id="@+id/rb_pc"
                style="@style/style_RadioButton"
                android:text="@string/personal_center"/>
        </RadioGroup>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>